Removed underline form "h1" tags and fixed whitespace.

--- a/views/pages/style.css
+++ b/views/pages/style.css
@@ -13,7 +13,6 @@ p,div,input[type=submit],input[type=text],input[type=password],label,form,textar
 h1
 {
 	text-align: center;
-	text-decoration: underline;
 	font-size: 32px;
 	color:#B5B5B5;
 }
